<resources>
    <string name="app_name">Random Gift</string>
    <string name="app_long_name">Random Gift Finder</string>
    <string name="title_history">Search History</string>
    <string name="title_settings">Settings</string>
    <string name="title_about">About</string>

    <string name="button_find">Find Random Gift</string>
    <string name="button_browser">Open in Browser</string>

    <string name="share">Share</string>

    <string name="drawer_item_home">Home</string>
    <string name="drawer_item_history">History</string>
    <string name="drawer_item_settings">Settings</string>
    <string name="drawer_item_aboutopensource">About &amp; Open Source Licenses</string>

    <string name="gift_title">Gift Title</string>
    <string name="default_gift_link">http://www.ebay.com</string>
    <string name="main_image">Picture of Gift</string>

    <string name="action_share">Share</string>
    <string name="card_title">Title</string>
    <string name="card_image">Image</string>

    <string name="empty">No items found.</string>
</resources>
