<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/card_item"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    card_view:cardCornerRadius="4dp"
    android:layout_margin="5dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:background="@color/colorAccent"
            android:text="@string/card_title"
            android:gravity="center_vertical"
            android:textColor="@android:color/white"
            android:textSize="14sp"/>

        <com.android.volley.toolbox.NetworkImageView
            android:id="@+id/image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:text="@string/card_image"
            android:gravity="center_vertical"
            android:textSize="12sp"
            android:layout_below="@id/title"
            android:layout_marginTop="10dp"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"/>

        <Button
            android:id="@+id/btnCardBrowser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_browser"
            android:textSize="12sp"
            android:layout_below="@id/title"
            android:layout_toRightOf="@+id/image"
            android:layout_toEndOf="@+id/image"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"/>

        <Button
            android:id="@+id/btnCardShare"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_share"
            android:textSize="12sp"
            android:layout_below="@id/title"
            android:layout_toRightOf="@+id/btnCardBrowser"
            android:layout_toEndOf="@+id/btnCardBrowser"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"/>

    </RelativeLayout>



</android.support.v7.widget.CardView>