<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_main" tools:context=".MainActivity">

    <com.android.volley.toolbox.NetworkImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:id="@+id/imageMain"
        android:contentDescription="@string/main_image"
        android:src="@drawable/placeholder_gift"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/gift_title"
        android:id="@+id/textTitle"
        android:maxLength="48"
        android:layout_below="@+id/imageMain"
        android:layout_centerHorizontal="true"/>

    <LinearLayout android:layout_height="wrap_content" android:layout_width="wrap_content" android:layout_below="@+id/textTitle"
        android:layout_centerHorizontal="true">
        <android.support.v7.widget.CardView
            android:id="@+id/btnBrowser"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_marginTop="20dp"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:onClick="onClickBrowser"
            card_view:cardBackgroundColor="#d9d9d9"
            card_view:cardCornerRadius="2dp"
            card_view:cardElevation="1dp">

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <TextView
                    android:id="@+id/textBrowser"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:gravity="center"
                    android:minWidth="88dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:singleLine="true"
                    android:text="@string/button_browser"
                    android:textColor="#000000"/>
            </RelativeLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/btnGenerate"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:onClick="onClickGenerate"
            card_view:cardBackgroundColor="#d9d9d9"
            card_view:cardCornerRadius="2dp"
            card_view:cardElevation="1dp">

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <TextView
                    android:id="@+id/textGenerate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:gravity="center"
                    android:minWidth="88dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:singleLine="true"
                    android:text="@string/button_find"
                    android:textColor="#000000"/>
            </RelativeLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>

</RelativeLayout>
